# VibeEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  tests.yml
Assets/: DiabloDemo.vscene  FeatureShowcase.vscene  GameDemo.vscene  InputTest.vscene  Test_Debug.vscene  Test_Hierarchy.vscene  Test_Lighting.vscene  Test_PBR.vscene  Test_Particles.vscene  Test_Physics.vscene  Test_PostFX.vscene  Test_UI.vscene  TransparencyTest.vscene  launcher.vscene
Assets/Models/KenneyTrainKit/: License.txt
ScriptProject/: CMakeLists.txt  PlayerController.cpp
Scripts/: build.bat  configure.bat  rebuild.bat
assets/: test.vscene
docs/: hpwater-parity-roadmap.md
engine/: CMakeLists.txt
engine/include/VibeEngine/: VibeEngine.h
engine/include/VibeEngine/Animation/: AnimStateMachine.h  AnimationClip.h  Animator.h  IKSolver.h  Skeleton.h
engine/include/VibeEngine/Asset/: AssetDatabase.h  FBXImporter.h  FileWatcher.h  GLTFImporter.h  MeshAsset.h  MeshImporter.h  ThumbnailCache.h
engine/include/VibeEngine/Audio/: AudioEngine.h
engine/include/VibeEngine/Core/: Application.h  BuildExporter.h  Console.h  FileDialog.h  Log.h  Object.h  Profiler.h  UUID.h  Window.h
engine/include/VibeEngine/Editor/: EditorCommand.h  EditorPlugin.h  PluginEngine.h
engine/include/VibeEngine/ImGui/: ImGuiLayer.h
engine/include/VibeEngine/Input/: Input.h  InputAction.h  KeyCodes.h
engine/include/VibeEngine/Navigation/: NavGrid.h
engine/include/VibeEngine/Physics/: PhysicsWorld.h
engine/include/VibeEngine/Platform/OpenGL/: OpenGLBuffer.h  OpenGLComputeShader.h  OpenGLContext.h  OpenGLFramebuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h
engine/include/VibeEngine/Platform/Vulkan/: LitShadersSpv.h  SkyShadersSpv.h  TriangleShadersSpv.h  VulkanBuffer.h  VulkanContext.h  VulkanRendererAPI.h  VulkanShader.h  VulkanTexture.h  VulkanVertexArray.h
engine/include/VibeEngine/Renderer/: Buffer.h  ComputeShader.h  DeferredPlusRenderer.h  DeferredRenderer.h  EditorCamera.h  ForwardPlusRenderer.h  Framebuffer.h  Frustum.h  GPULightData.h  GPUResourceTracker.h  GizmoRenderer.h  GraphicsContext.h  GridRenderer.h  InstancedRenderer.h  LODSystem.h  LightProbe.h  Lightmapper.h  Material.h  OcclusionCulling.h  ParticleSystem.h  PostProcessing.h  ReflectionProbe.h  RenderCommand.h  RenderGraph.h  Renderer.h  RendererAPI.h  SSAO.h  SSR.h  Shader.h  ShaderLab.h  ShaderSources.h  ShadowMap.h  SpriteBatchRenderer.h  Texture.h  VertexArray.h  VideoPlayer.h
engine/include/VibeEngine/Scene/: Components.h  Entity.h  MeshLibrary.h  Scene.h  SceneManager.h  SceneSerializer.h
engine/include/VibeEngine/Scripting/: NativeScript.h  ScriptEngine.h
engine/include/VibeEngine/Terrain/: Terrain.h
engine/include/VibeEngine/UI/: FontAtlas.h  UIRenderer.h
engine/shaders/: Decal.shader  DeferredLighting.shader  GBuffer.shader  HPWaterCaustic.shader  HPWaterCausticAtlas.shader  HPWaterCausticFilter.comp  HPWaterCausticFilter.shader  HPWaterCausticIrradiance.comp  HPWaterCausticIrradianceResolve.comp  HPWaterComposite.shader  HPWaterDepthMerge.shader  HPWaterDepthPyramid.shader  HPWaterFluidDynamics.comp  HPWaterFluidDynamics.shader  HPWaterFluidHeightCapture.shader  HPWaterGBuffer.shader  HPWaterMask.shader  HPWaterNormalMerge.shader  HPWaterSSR.shader  HPWaterSSRMotionVector.shader  HPWaterSpectrum.comp  HPWaterSpectrumButterfly.comp  HPWaterSpectrumResolve.comp  HPWaterSpectrumSeed.comp  HPWaterVolume.shader  HPWaterVolumeFilter.shader  HPWaterVolumeMotionVector.shader  HPWaterVolumeTemporal.shader  HPWaterVolumeUpsample.shader  Lit.shader  LitForwardPlus.shader  LitInstanced.shader  Outline.shader  PBR.shader  Particle.shader  Sky.shader  Sprite.shader  Terrain.shader  Unlit.shader  UnlitInstanced.shader  (+14 more)
engine/src/Animation/: AnimStateMachine.cpp  AnimationClip.cpp  Animator.cpp  IKSolver.cpp  Skeleton.cpp
engine/src/Asset/: AssetDatabase.cpp  FBXImporter.cpp  FileWatcher.cpp  GLTFImporter.cpp  MeshAsset.cpp  MeshImporter.cpp  ThumbnailCache.cpp
engine/src/Audio/: AudioEngine.cpp
engine/src/Core/: Application.cpp  BuildExporter.cpp  Console.cpp  FileDialog.cpp  Log.cpp  Profiler.cpp  Window.cpp
engine/src/Editor/: EditorCommand.cpp  PluginEngine.cpp
engine/src/ImGui/: ImGuiLayer.cpp
engine/src/Input/: Input.cpp  InputAction.cpp
engine/src/Navigation/: NavGrid.cpp
engine/src/Physics/: PhysicsWorld.cpp
engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLComputeShader.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
engine/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanContext.cpp  VulkanRendererAPI.cpp  VulkanTexture.cpp
engine/src/Platform/Vulkan/shaders/: lit.frag  lit.vert
engine/src/Renderer/: Buffer.cpp  ComputeShader.cpp  DeferredPlusRenderer.cpp  DeferredRenderer.cpp  EditorCamera.cpp  ForwardPlusRenderer.cpp  Framebuffer.cpp  GPUResourceTracker.cpp  GizmoRenderer.cpp  GridRenderer.cpp  HPWaterLtcData.inc  InstancedRenderer.cpp  LODSystem.cpp  LightProbe.cpp  Lightmapper.cpp  Material.cpp  OcclusionCulling.cpp  ParticleSystem.cpp  PostProcessing.cpp  ReflectionProbe.cpp  RenderCommand.cpp  RenderGraph.cpp  Renderer.cpp  RendererAPI.cpp  SSAO.cpp  SSR.cpp  Shader.cpp  ShaderLab.cpp  ShadowMap.cpp  SpriteBatchRenderer.cpp  Texture.cpp  VertexArray.cpp  VideoPlayer.cpp
engine/src/Scene/: Entity.cpp  MeshLibrary.cpp  Scene.cpp  SceneManager.cpp  SceneSerializer.cpp
engine/src/Scripting/: ScriptEngine.cpp  ScriptGlue.cpp
engine/src/Terrain/: Terrain.cpp
engine/src/UI/: FontAtlas.cpp  UIRenderer.cpp
runtime/: CMakeLists.txt  main.cpp
sandbox/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  main.cpp
